@@ -1,7 +1,13 @@
 2002-11-17  Mikael Djurfeldt  <mdj@linnaeus>
 
+	* Makefile.am, guile-tcltk-aclocal.sh: Run aclocal in a sane way.
+
 	* configure.in: Make thread support test depend on the existence
-	of scm_internal_select instead of -lqthreads GUILE_LIBS.
+	of scm_internal_select instead of -lqthreads GUILE_LIBS;
+	Don't update LIBOBJS directly.  Instead use AC_LIBOBJ.  Later
+	versions of autoconf demands this.
+
+	* acinclude.am: New file: Provides the GUILE_COMPAT macro.
 
 	* Makefile.am (INCLUDES): Define INCLUDES to GUILE_CFLAGS.
 
